// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination should render correctly with tag. 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="pagination"
  >
    <a
      class=""
      href="/tag/test"
    >
      1
    </a>
    <a
      class=""
      href="/tag/test/2"
    >
      2
    </a>
    <a
      class=""
      href="/tag/test/3"
    >
      3
    </a>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly. 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="pagination"
  >
    <a
      class="undefined"
      href="/"
    >
      1
    </a>
    <a
      class=""
      href="/2"
    >
      2
    </a>
    <a
      class=""
      href="/3"
    >
      3
    </a>
  </div>
</DocumentFragment>
`;
